[package]
name = "hello_world"
version = "0.1.0"
authors = ["Derrek Gass <dwgass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.42"
regex = "0.1.41"
rand = { git = "https://github.com/rust-lang-nursery/rand.git" }
